--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.android.gaospconf"
-      android:versionCode="1"
+      android:versionCode="2"
       android:versionName="2.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" >
     	<activity android:name=".SplashScreen"
-                  android:label="@string/app_name">
+    			  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+    			  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".conf"
-				  android:label="@string/app_name"	
                   android:windowSoftInputMode="stateUnchanged">
             <intent-filter>
                 <action android:name="com.android.gaospconf.splashscreen.conf" />
@@ -21,5 +21,4 @@
         </activity>
     </application>
     <uses-sdk android:minSdkVersion="3" />
-
 </manifest>
