--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,12 @@
       package="com.android.gaospconf"
       android:versionCode="2"
       android:versionName="2.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" >
+	<supports-screens
+    	android:largeScreens="true"
+    	android:normalScreens="true"
+        android:smallScreens="true"
+        android:anyDensity="true" />
+    <application android:icon="@drawable/icon" android:label="@string/app_name" >  	
     	<activity android:name=".SplashScreen"
     			  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
     			  android:screenOrientation="portrait">
@@ -20,5 +25,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-sdk android:minSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="4" />
 </manifest>
