--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,12 +3,14 @@
       package="com.android.gaospconf"
       android:versionCode="2"
       android:versionName="2.0">
+    <uses-permission android:name="android.permission.DEVICE_POWER"></uses-permission>
+    <uses-sdk android:minSdkVersion="4" />
 	<supports-screens
     	android:largeScreens="true"
     	android:normalScreens="true"
         android:smallScreens="true"
         android:anyDensity="true" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name" >  	
+    <application android:icon="@drawable/icon" android:label="@string/app_name" >
     	<activity android:name=".SplashScreen"
     			  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
     			  android:screenOrientation="portrait">
@@ -25,5 +27,4 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-sdk android:minSdkVersion="4" />
 </manifest>
