--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,8 @@
       package="com.android.gaospconf"
       android:versionCode="5" android:versionName="3">
     <uses-sdk android:minSdkVersion="8" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 	<supports-screens
     	android:largeScreens="true"
     	android:normalScreens="true"
